fixtures/valid/commonjs-public-require/src/consumer/public.js
const producer = require("../producer/public");
export const consumerValue = producer.producerValue;
