fixtures/invalid/computed-require-fail-closed/src/core/public.js
const target = "../optional/plugin";

export function run() {
  return require(target);
}
